--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
     </div>
     <footer></footer>
     <script src="scripts/jquery-1.11.3.min.js"></script>
+    <script src="scripts/jquery-ui.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
     <script src="scripts/jquery.fullPage.js"></script>
     <script src="scripts/script.js"></script>
