--- a/what.html
+++ b/what.html
@@ -1,414 +1,50 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>fullPage.js One Page Scroll Sites</title>
-    <meta name="author" content="Alvaro Trigo Lopez" />
-    <meta name="description" content="fullPage plugin by Alvaro Trigo. Create fullscreen pages fast and simple. One page scroll like iPhone website." />
-    <meta name="keywords" content="fullpage,jquery,alvaro,trigo,plugin,fullscren,screen,full,iphone5,apple" />
-    <meta name="Resource-type" content="Document" />
-
-
-    <link rel="stylesheet" type="text/css" href="css/fullPage/jquery.fullPage.css" />
-
-
-    <style>
-        /* Sections
-         * --------------------------------------- */
-        #section0 img,
-        #section1 img {
-            margin: 20px 0 0 0;
-        }
-
-        #section2 img {
-            margin: 20px 0 0 52px;
-        }
-
-        #section3 img {
-            bottom: 0px;
-            position: absolute;
-            margin-left: -420px;
-        }
-
-        .intro p {
-            width: 50%;
-            margin: 0 auto;
-            font-size: 1.5em;
-        }
-
-        .twitter-share-button {
-            position: absolute;
-            z-index: 99;
-            right: 149px;
-            top: 9px;
-        }
-
-        @CHARSET "ISO-8859-1";
-/* Reset CSS
- * --------------------------------------- */
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,
-form,fieldset,input,textarea,p,blockquote,th,td {
-    padding: 0;
-    margin: 0;
-}
-a{
-	text-decoration:none;
-}
-table {
-    border-spacing: 0;
-}
-fieldset,img {
-    border: 0;
-}
-address,caption,cite,code,dfn,em,strong,th,var {
-    font-weight: normal;
-    font-style: normal;
-}
-strong{
-	font-weight: bold;
-}
-ol,ul {
-    list-style: none;
-    margin:0;
-    padding:0;
-}
-caption,th {
-    text-align: left;
-
-}
-h1,h2,h3,h4,h5,h6 {
-    font-weight: normal;
-    font-size: 100%;
-    margin:0;
-    padding:0;
-    color:#444;
-}
-q:before,q:after {
-    content:'';
-}
-abbr,acronym { border: 0;
-}
-
-
-/* Custom CSS
- * --------------------------------------- */
-body{
-	font-family: arial,helvetica;
-	color: #333;
-	color: rgba(0,0,0,0.5);
-}
-.wrap{
-	margin-left: auto;
-	margin-right: auto;
-	width: 960px;
-	position: relative;
-}
-h1{
-	font-size: 6em;
-}
-p{
-	font-size: 2em;
-}
-.intro p{
-	width: 50%;
-	margin: 0 auto;
-	font-size: 1.5em;
-}
-.section{
-	text-align:center;
-}
-#menu li {
-	display:inline-block;
-	margin: 10px;
-	color: #000;
-	background:#fff;
-	background: rgba(255,255,255, 0.5);
-	-webkit-border-radius: 10px;
-            border-radius: 10px;
-}
-#menu li.active{
-	background:#666;
-	background: rgba(0,0,0, 0.5);
-	color: #fff;
-}
-#menu li a{
-	text-decoration:none;
-	color: #000;
-}
-#menu li.active a:hover{
-	color: #000;
-}
-#menu li:hover{
-	background: rgba(255,255,255, 0.8);
-}
-#menu li a,
-#menu li.active a{
-	padding: 9px 18px;
-	display:block;
-}
-#menu li.active a{
-	color: #fff;
-}
-#menu{
-	position:fixed;
-	top:0;
-	left:0;
-	height: 40px;
-	z-index: 70;
-	width: 100%;
-	padding: 0;
-	margin:0;
-}
-.twitter-share-button{
-	position: fixed;
-	z-index: 99;
-	right: 149px;
-	top: 9px;
-}
-#download{
-	margin: 10px 0 0 0;
-	padding: 15px 10px;
-	color: #fff;
-	text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
-	background-color: #49afcd;
-	background-image: -moz-linear-gradient(top, #5bc0de, #2f96b4);
-	background-image: -ms-linear-gradient(top, #5bc0de, #2f96b4);
-	background-image: -webkit-gradient(linear,0 0,0 100%,from( #5bc0de),to( #2f96b4));
-	background-image: -webkit-linear-gradient(top, #5bc0de, #2f96b4);
-	background-image: -o-linear-gradient(top, #5bc0de, #2f96b4);
-	background-image: linear-gradient(top, #5bc0de, #2f96b4);
-	background-repeat: repeat-x;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#5bc0de', endColorstr='#2f96b4', GradientType=0);
-	border-color: #2f96b4 #2f96b4 #1f6377;
-	border-color: rgba(0,0,0,.1) rgba(0,0,0,.1) rgba(0,0,0,.25);
-	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-
-	-webkit-border-radius: 6px;
-	-moz-border-radius: 6px;
-	border-radius: 6px;
-	vertical-align: middle;
-	cursor: pointer;
-	display: inline-block;
-	-webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
-	-moz-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
-	box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
-}
-#download a{
-	text-decoration:none;
-	color:#fff;
-}
-#download:hover{
-	text-shadow: 0 -1px 0 rgba(0,0,0,.25);
-	background-color: #2F96B4;
-	background-position: 0 -15px;
-	-webkit-transition: background-position .1s linear;
-	-moz-transition: background-position .1s linear;
-	-ms-transition: background-position .1s linear;
-	-o-transition: background-position .1s linear;
-	transition: background-position .1s linear;
-}
-#infoMenu{
-	height: 20px;
-	color: #f2f2f2;
-	position:fixed;
-	z-index:70;
-	bottom:0;
-	width:100%;
-	text-align:right;
-	font-size:0.9em;
-	padding:8px 0 8px 0;
-}
-#infoMenu ul{
-	padding: 0 40px;
-}
-#infoMenu li a{
-	display: block;
-	margin: 0 22px 0 0;
-	color: #333;
-}
-#infoMenu li a:hover{
-	text-decoration:underline;
-}
-#infoMenu li{
-	display:inline-block;
-	position:relative;
-}
-#examplesList{
-	display:none;
-	background: #282828;
-	-webkit-border-radius: 6px;
-	-moz-border-radius: 6px;
-	border-radius: 6px;
-	padding: 20px;
-	float: left;
-	position: absolute;
-	bottom: 29px;
-	right: 0;
-	width:638px;
-	text-align:left;
-}
-#examplesList ul{
-	padding:0;
-}
-#examplesList ul li{
-	display:block;
-	margin: 5px 0;
-}
-#examplesList ul li a{
-	color: #BDBDBD;
-	margin:0;
-}
-#examplesList ul li a:hover{
-	color: #f2f2f2;
-}
-#examplesList .column{
-	float: left;
-	margin: 0 20px 0 0;
-}
-#examplesList h3{
-	color: #f2f2f2;
-	font-size: 1.2em;
-	margin: 0 0 15px 0;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.4);
-	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
-	-moz-box-shadow: 0 1px 0 rgba(255,255,255,0.1);
-	box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
-	padding: 0 0 5px 0;
-}
-
-
-
-/* Demos Menu
- * --------------------------------------- */
- #demosMenu{
-	position:fixed;
-	bottom: 10px;
-	right:10px;
-	z-index: 999;
- }
-
-    </style>
-    <!--[if IE]>
-        <script type="text/javascript">
-             var console = { log: function() {} };
-        </script>
-    <![endif]-->
-
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-
-    <script type="text/javascript" src="scripts/jquery.fullPage.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $("#demosMenu").change(function () {
-                window.location.href = $(this).find("option:selected").attr("id") + '.html';
-            });
-        });
-    </script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('#fullpage').fullpage({
-                sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE', 'whitesmoke', '#ccddff'],
-                anchors: ['firstPage', 'secondPage', '3rdPage', '4thpage', 'lastPage'],
-                menu: '#menu',
-                scrollingSpeed: 1000
-            });
-        });
-    </script>
-
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Jordan McArdle">
+    <meta name="description" content="A portfolio">
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <title>Jordan McArdle</title>
+    <!--Google Fonts-->
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700|PT+Sans+Narrow|Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css">
+    <!--Font Awesome/Devicon(s)-->
+    <link rel="stylesheet" type="text/css" href="css/font-awesome/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/devicons/devicons.min.css">
+    <link rel="stylesheet" href="css/devicon/devicon.min.css" />
+    <link rel="stylesheet" href="css/devicon/devicon-colors.css" />
+    <link rel="stylesheet" type="text/css" href="css/font-awesome/font-awesome-animation.min.css" />
+    <!--FullPage.js-->
+    <link rel="stylesheet" href="css/fullPage/jquery.fullPage.css" />
+    <!-- Custom styles for this template -->
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
-<body>
-
-
-    <select id="demosMenu">
-        <option selected>Choose Demo</option>
-        <option id="backgrounds">Background images</option>
-        <option id="backgroundVideo">Background video</option>
-        <option id="gradientBackgrounds">Gradient backgrounds</option>
-        <option id="backgroundsFixed">Fixed fullscreen backgrounds</option>
-        <option id="looping">Looping</option>
-        <option id="noAnchor">No anchor links</option>
-        <option id="scrollingSpeed">Scrolling speed</option>
-        <option id="easing">Easing</option>
-        <option id="callbacks">Callbacks</option>
-        <option id="css3">CSS3</option>
-        <option id="continuous">Continuous scrolling</option>
-        <option id="normalScroll">Normal scrolling</option>
-        <option id="scrollBar">Scroll bar enabled</option>
-        <option id="scrolling">Scroll inside sections and slides</option>
-        <option id="navigationV">Vertical navigation dots</option>
-        <option id="navigationH">Horizontal navigation dots</option>
-        <option id="fixedHeaders">Fixed headers</option>
-        <option id="apple">Apple iPhone demo (animations)</option>
-        <option id="oneSection">One single section</option>
-        <option id="responsive">Responsive</option>
-        <option id="methods">Methods</option>
-    </select>
-
-    <ul id="menu">
-        <li data-menuanchor="firstPage"><a href="#firstPage">First slide</a></li>
-        <li data-menuanchor="secondPage"><a href="#secondPage">Second slide</a></li>
-        <li data-menuanchor="3rdPage"><a href="#3rdPage">Third slide</a></li>
-        <li data-menuanchor="4thpage"><a href="#4thpage">Fourth slide</a></li>
-    </ul>
-
-
-    <div id="fullpage">
-        <div class="section " id="section0">
-            <h1>fullPage.js</h1>
-            <p>Create Beautiful Fullscreen Scrolling Websites</p>
-            <img src="imgs/fullPage.png" alt="fullPage" />
-        </div>
-        <div class="section" id="section1">
-            <div class="slide">
-                <div class="intro">
-                    <h1>Create Sliders</h1>
-                    <p>Not only vertical scrolling but also horizontal scrolling. With fullPage.js you will be able to add horizontal sliders in the most simple way ever.</p>
-                    <img src="imgs/slider.png" alt="slider" />
-                </div>
-
-            </div>
-            <div class="slide">
-                <div class="intro">
-                    <img src="imgs/1.png" alt="simple" />
-                    <h1>Simple</h1>
-                    <p>Easy to use. Configurable and customizable.</p>
-                </div>
-            </div>
-            <div class="slide">
-                <div class="intro">
-                    <img src="imgs/2.png" alt="Cool" />
-                    <h1>Cool</h1>
-                    <p>It just looks cool. Impress everybody with a simple and modern web design!</p>
-                </div>
-            </div>
-            <div class="slide">
-                <div class="intro">
-                    <img src="imgs/3.png" alt="Compatible" />
-                    <h1>Compatible</h1>
-                    <p>Working in modern and old browsers too! IE 8 users don't have the fault of using that horrible browser! Lets give them a chance to see your site in a proper way!</p>
-                </div>
-            </div>
-        </div>
-        <div class="section" id="section2">
-            <div class="intro">
-                <h1>Example</h1>
-                <p>HTML markup example to define 4 sections.</p>
-                <img src="imgs/example2.png" alt="example" />
-            </div>
-        </div>
-        <div class="section" id="section3">
-            <div class="intro">
-                <h1>Working On Tablets</h1>
-                <p>
-                    Designed to fit to different screen sizes as well as tablet and mobile devices.
-                    <br /><br /><br /><br /><br /><br />
-                </p>
-            </div>
-            <img src="imgs/tablets.png" alt="tablets" />
-        </div>
+<body class="home-page">
+    <img class="profile-pic" src="images/profilepicture.jpg" style="width: 20%; height: 30%;" />
+    <div class="profile faa-parent animated-hover">
+        <i class="fa fa-user faa-tada"></i>Jordan McArdle
     </div>
-
+    <div class="profile-contact">
+        <div class="contact-email"><i class="fa fa-envelope-o"></i>jordanmcardle@gmail.com</div>
+        <div class="contact-phone"><i class="fa fa-phone"></i>205.960.9966</div>
+    </div>
+    <div id="fullpage"></div>
+    <footer></footer>
+    <script src="scripts/jquery-1.11.3.min.js"></script>
+    <script src="scripts/jquery-ui.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
+    <script src="scripts/jquery.fullPage.js"></script>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/jquery.lazy.min.js"></script>
+    <script>
+        $("div.lazy").lazy({
+            effect: "fadeIn"
+        });
+        Jmac.game.init();
+    </script>
 </body>
 </html>
