--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           </div>
         </div>
       </div>
+      <img class="video-placeholder" src="videos/Hello-World/Hello-World.jpg" alt="">
       <div class="text-content">
         <h5>Hello, world!</h5>
       </div>
